@@ -1118,12 +1118,14 @@ private EditText newmsg;
             Collections.sort(stickychannels, (c1, c2) -> c1.szName.compareToIgnoreCase(c2.szName));
 
             Collections.sort(currentusers, (u1, u2) -> {
-                if (((u1.uUserState & UserState.USERSTATE_VOICE) != 0) &&
-                    ((u2.uUserState & UserState.USERSTATE_VOICE) == 0))
-                    return -1;
-                else if (((u1.uUserState & UserState.USERSTATE_VOICE) == 0) &&
-                         ((u2.uUserState & UserState.USERSTATE_VOICE) != 0))
-                    return 1;
+                if (PreferenceManager.getDefaultSharedPreferences(getBaseContext()).getBoolean("movetalk_checkbox", false)) {
+                    if (((u1.uUserState & UserState.USERSTATE_VOICE) != 0) &&
+                        ((u2.uUserState & UserState.USERSTATE_VOICE) == 0))
+                        return -1;
+                    else if (((u1.uUserState & UserState.USERSTATE_VOICE) == 0) &&
+                             ((u2.uUserState & UserState.USERSTATE_VOICE) != 0))
+                        return 1;
+                }
 
                 String name1 = Utils.getDisplayName(getBaseContext(), u1);
                 String name2 = Utils.getDisplayName(getBaseContext(), u2);
